k8s/prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ui-route
  namespace: rottenbikes-prd
spec:
  parentRefs:
  - name: shared-gtw
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - rottenbik.es
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ui-prd
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: rottenbikes-prd
spec:
  parentRefs:
  - name: shared-gtw
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - api.rottenbik.es
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: api-prd
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ui-redirect
  namespace: rottenbikes-prd
spec:
  parentRefs:
  - name: shared-gtw
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - rottenbik.es
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443
